<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.assignment.first.activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="scrollable"
                    app:tabTextAppearance="@style/CustomTabStyle" />
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/appbar"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <RelativeLayout
                android:id="@+id/rlt_point3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewpager"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txt_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="start"
                    android:text="@string/text_view1"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_view1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/text_view2"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_view3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_view2"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:text="@string/text_view3"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_point4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlt_point3"
                android:background="@color/grey">

                <TextView
                    android:id="@+id/txt_tab_selected_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/tab_selected_text"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rlt_point5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rlt_point4"
                android:gravity="center">

                <Button
                    android:id="@+id/redBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_background"
                    android:text="@string/btn_red"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/blueBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_background"
                    android:text="@string/btn_blue"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/greenBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_background"
                    android:text="@string/btn_green"
                    android:textAllCaps="false" />
            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
